--- a/index.html
+++ b/index.html
@@ -1,48 +1,64 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <style>
-        body {
-            background-image: url("https://picsum.photos/1920/1080/");
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-    </style>
-    <script>
-        window.onload = OnResize;
-        function OnResize() {
-            console.log("Hello" + window.innerWidth);
-            document.body.style.backgroundImage = `url("https://picsum.photos/${screen.width}/${screen.height}/?blur=2")`;
-            document.body.style.backgroundPosition = 'center';
-        }
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-        window.OnResize = OnResize;
-    </script>
+  <script>
+    window.onload = OnResize;
 
-    <title>Ask the Bible</title>
-  </head>
-  <body>
-    <div style="width: 100vw; height: 100vh;"></div>
-    <h2>Hello, what do you need guidance for today?</h2>
+    function OnResize() {
+      document.getElementById('bg').style.backgroundImage =
+        `url("https://picsum.photos/${window.innerWidth}/${window.innerHeight}/?blur=5")`;
+    }
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    
-    <footer class="footer">
+    window.OnResize = OnResize;
+  </script>
+  <style>
+    .front {
+      display: block;
+      z-index: 5;
+      position: relative;
+    }
+  </style>
+
+  <title>Ask the Bible</title>
+</head>
+
+<body>
+  <main>
+  <div id="bg" style="display: block; z-index: 1; width: 100%; height: 100vh;">
+    <div class="front">
+      <h2 style="padding-left: 5%; padding-top: 5%;">Hello, what do you need guidance for today?</h2>
+
+      <input style="width:80%; margin-left: 10%;" type="text" placeholder="Enter your question here.">
+
+      <footer class="footer">
         <div class="container">
-          <span class="text-muted">This project made possible by <a href="https://bibleapi.co/en">Albiblia Digital</a>.</span>
+          <span class="text-muted">This project made possible by <a href="https://bibleapi.co/en">Albiblia
+              Digital</a>.</span>
         </div>
       </footer>
+    </div>
+  </div>
+  </main>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
