Trying to get bootstrap to work

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 
   <script>
     window.onload = OnResize;
@@ -33,32 +42,24 @@
 
 <body>
   <main>
-  <div id="bg" style="display: block; z-index: 1; width: 100%; height: 100vh;">
-    <div class="front">
-      <h2 style="padding-left: 5%; padding-top: 5%;">Hello, what do you need guidance for today?</h2>
+    <div id="bg" style="display: block; z-index: 1; width: 100%; height: 100vh;">
+      <div class="front">
+        <h2 style="padding-left: 5%; padding-top: 5%;">Hello, what do you need guidance for today?</h2>
 
-      <input style="width:80%; margin-left: 10%;" type="text" placeholder="Enter your question here.">
+        <input style="width:80%; margin-left: 10%;" type="text" placeholder="Enter your question here.">
 
-      <footer class="footer">
-        <div class="container">
-          <span class="text-muted">This project made possible by <a href="https://bibleapi.co/en">Albiblia
-              Digital</a>.</span>
-        </div>
-      </footer>
+        <footer class="footer">
+          <div class="container">
+            <span class="text-muted">This project made possible by <a href="https://bibleapi.co/en">Albiblia
+                Digital</a>.</span>
+          </div>
+        </footer>
+      </div>
     </div>
-  </div>
   </main>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
+
 </body>
 
 </html>
